--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,14 @@
 language: python
 install:
   - pip install -r requirements.txt
+sudo: required
+before_script:
+  -curl -LO https://storage.googleapis.com/kubernetes-release/release/$(curl -s https://storage.googleapis.com/kubernetes-release/release/stable.txt)/bin/linux/amd64/kubectl
+  -chmod +x ./kubectl
+  -sudo mv ./kubectl /usr/local/bin/kubectl
+  -mkdir ${HOME}/.kube
+  -cp config ${HOME}/.kube/config
 # command to run tests
 script:
   - python test.py
+
